--- a/plugins/tokenizers/CMakeLists.txt
+++ b/plugins/tokenizers/CMakeLists.txt
@@ -98,5 +98,5 @@ if(GRN_WITH_H3)
         OPTIONAL)
     endif()
   endif()
-  target_link_libraries(h3_index_tokenizer libgroonga h3::h3)
+  target_link_libraries(h3_index_tokenizer libgroonga)
 endif()
