--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1320,6 +1320,7 @@ if(NOT "${GRN_WITH_H3}" STREQUAL "no")
   endif()
   if(h3_FOUND)
     set(GRN_WITH_H3 TRUE)
+    target_link_libraries(grn_dependencies INTERFACE h3::h3)
     message(STATUS "H3: system")
   elseif(CMAKE_VERSION VERSION_GREATER_EQUAL "3.20")
     # We need to use function to create a variable scope
@@ -1356,7 +1357,7 @@ if(NOT "${GRN_WITH_H3}" STREQUAL "no")
               DESTINATION "${GRN_DATA_DIR}/h3")
     endfunction()
     grn_build_h3()
-    add_library(h3::h3 ALIAS h3)
+    target_link_libraries(grn_dependencies INTERFACE h3)
     set(GRN_WITH_H3_BUNDLED TRUE)
     message(STATUS "H3: bundled")
   else()
