h3_in_grid_disk: add
functions/h3 plugin is added and it's defined in the plugin.

It finds records that in k grid disk from the origin point.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -119,6 +119,7 @@ repos:
           ?lib/type\.c|
           ?lib/util\.c|
           ?lib/vector\.cpp|
+          ?plugins/functions/h3\.c|
           ?plugins/functions/number\.cpp|
           ?plugins/tokenizers/h3_index\.c|
           ?src/groonga\.c|
