--- a/packages/debian/control.in
+++ b/packages/debian/control.in
@@ -132,18 +132,19 @@ Description: MeCab tokenizer for Groonga
  .
  This package provides MeCab tokenizer.
 
-@ENABLE_H3@Package: groonga-tokenizer-h3-index
+@ENABLE_H3@Package: groonga-plugin-h3
 @ENABLE_H3@Section: libs
 @ENABLE_H3@Architecture: any
 @ENABLE_H3@Depends:
 @ENABLE_H3@  ${misc:Depends},
 @ENABLE_H3@  ${shlibs:Depends},
 @ENABLE_H3@  libgroonga0 (= ${binary:Version})
-@ENABLE_H3@Description: H3 index tokenizer for Groonga
+@ENABLE_H3@Description: H3 related plugin for Groonga
 @ENABLE_H3@ Groonga is an open-source fulltext search engine and column store.
 @ENABLE_H3@ It lets you write high-performance applications that requires fulltext search.
 @ENABLE_H3@ .
-@ENABLE_H3@ This package provides H3 index tokenizer.
+@ENABLE_H3@ This package provides TokenH3Index by tokenizers/h3_index and
+@ENABLE_H3@ h3_*() functions by functions/h3.
 
 Package: groonga-token-filter-stem
 Section: libs
