--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -144,16 +144,6 @@ Requires:	mecab-ipadic
 %description tokenizer-mecab
 MeCab tokenizer for Groonga
 
-%if %{_rhel} >= 8
-%package tokenizer-h3-index
-Summary:	H3 index tokenizer for Groonga
-Group:		Applications/Text
-Requires:	%{name}-libs = %{version}-%{release}
-
-%description tokenizer-h3-index
-H3 index tokenizer for Groonga
-%endif
-
 %package token-filter-stem
 Summary:	Stemming token filter for Groonga
 Group:		Applications/Text
@@ -162,6 +152,19 @@ Requires:	libstemmer
 
 %description token-filter-stem
 Stemming token filter for Groonga. Name is TokenFilterStem.
+
+%if %{_rhel} >= 8
+%package plugin-h3
+Summary:	H3 related plugin for Groonga
+Group:		Applications/Text
+Requires:	%{name}-libs = %{version}-%{release}
+
+%description plugin-h3
+H# plugin for Groonga.
+
+This provides TokenH3Index by tokenizers/h3_index and
+h3_*() functions by functions/h3.
+%endif
 
 %package plugin-suggest
 Summary:	Suggest plugin for Groonga
@@ -398,6 +401,14 @@ exit 0
 %{_libdir}/pkgconfig/groonga*.pc
 %{_libdir}/cmake/Groonga/*.cmake
 
+%if %{_rhel} >= 8
+%files plugin-h3
+%defattr(-,root,root,-)
+%{_libdir}/groonga/plugins/functions/h3.so
+%{_libdir}/groonga/plugins/tokenizers/h3_index.so
+%{_datadir}/groonga/h3/
+%endif
+
 %files plugin-suggest
 %defattr(-,root,root,-)
 %{_bindir}/groonga-suggest-*
@@ -407,13 +418,6 @@ exit 0
 %files tokenizer-mecab
 %defattr(-,root,root,-)
 %{_libdir}/groonga/plugins/tokenizers/mecab.so
-
-%if %{_rhel} >= 8
-%files tokenizer-h3-index
-%defattr(-,root,root,-)
-%{_libdir}/groonga/plugins/tokenizers/h3_index.so
-%{_datadir}/groonga/h3/
-%endif
 
 %files token-filter-stem
 %defattr(-,root,root,-)
