Don't use "version" as file name
GitHub: fix GH-1738

Because clang include "version" file.

Reported by Windymelt. Thanks!!!

--- a/Makefile.am
+++ b/Makefile.am
@@ -53,7 +53,7 @@ $(srcdir)/version.sh: FORCE
 include $(srcdir)/version.sh
 
 dist-hook:
-	echo "$(GRN_VERSION)" > $(distdir)/version
+	echo "$(GRN_VERSION)" > $(distdir)/full_version
 	echo "GRN_VERSION_FULL=$(GRN_VERSION)" > $(distdir)/version.sh
 	cd $(distdir) && autoreconf --install --force && find . -name autom4te.cache | xargs rm -fr
 
