Update pre-commit config to include introduction.md for Prettier formatting

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -135,6 +135,7 @@ repos:
         files: >-
           (
           ?CMakePresets\.json|
+          ?doc/source/contribution/documentation/introduction\.md|
           )
 
 exclude: "^vendor/.*"
