--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,7 @@ repos:
           ?include/groonga/float\.h|
           ?include/groonga/groonga\.h|
           ?include/groonga/h3\.h|
+          ?include/groonga/hash\.h|
           ?include/groonga/highlighter\.h|
           ?include/groonga/ii\.h|
           ?include/groonga/obj\.h|
