clang-format: add groonga/pat.h

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,6 +32,7 @@ repos:
           ?include/groonga/highlighter\.h|
           ?include/groonga/ii\.h|
           ?include/groonga/obj\.h|
+          ?include/groonga/pat\.h|
           ?include/groonga/proc\.h|
           ?include/groonga/table\.h|
           ?include/groonga/token\.h|
