--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,6 +41,7 @@ repos:
           ?include/groonga/tokenizer\.h|
           ?include/groonga/type\.h|
           ?include/groonga/util\.h|
+          ?lib/accessor\.c|
           ?lib/aggregators\.c|
           ?lib/alloc\.c|
           ?lib/applier\.c|
