--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -83,6 +83,7 @@ repos:
           ?lib/grn_request_canceler\.h|
           ?lib/grn_request_timer\.h|
           ?lib/grn_scan_info\.h|
+          ?lib/grn_selector\.h|
           ?lib/grn_snip\.h|
           ?lib/grn_str\.h|
           ?lib/grn_table_selector\.h|
