--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -112,6 +112,7 @@ repos:
           ?lib/proc/proc_snippet\.c|
           ?lib/proc/proc_tokenize\.c|
           ?lib/proc\.c|
+          ?lib/selector\.c|
           ?lib/snip\.c|
           ?lib/store\.c|
           ?lib/str\.c|
