--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -38,6 +38,7 @@ AM_CXXFLAGS =					\
 	$(NO_STRICT_ALIASING_CFLAGS)		\
 	$(COVERAGE_CFLAGS)			\
 	$(GRN_CXXFLAGS)				\
+	$(MESSAGE_PACK_CFLAGS)			\
 	$(APACHE_ARROW_CFLAGS)			\
 	$(RAPIDJSON_CFLAGS)
 
