--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,6 +33,7 @@ repos:
           ?include/groonga/highlighter\.h|
           ?include/groonga/ii\.h|
           ?include/groonga/obj\.h|
+          ?include/groonga/operator\.h|
           ?include/groonga/output\.h|
           ?include/groonga/pat\.h|
           ?include/groonga/proc\.h|
