clang-format: add lib/grn_store.h

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -87,6 +87,7 @@ repos:
           ?lib/grn_scan_info\.h|
           ?lib/grn_selector\.h|
           ?lib/grn_snip\.h|
+          ?lib/grn_store\.h|
           ?lib/grn_str\.h|
           ?lib/grn_table_selector\.h|
           ?lib/grn_token_cursor\.h|
