--- a/.github/workflows/autotools.yml
+++ b/.github/workflows/autotools.yml
@@ -177,7 +177,7 @@ jobs:
 
   macos:
     name: macOS
-    runs-on: macos-latest
+    runs-on: macos-12
     timeout-minutes: 45
     steps:
       - uses: actions/checkout@v4
