--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -308,7 +308,7 @@ jobs:
 
   macos:
     name: macOS
-    runs-on: macos-latest
+    runs-on: macos-12
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@v4
@@ -371,9 +371,7 @@ jobs:
             -v
       - name: "Test: mruby"
         run: |
-          DYLD_LIBRARY_PATH=/usr/local/lib \
-            USE_SYSTEM=yes \
-            test/mruby/run-test.rb
+          USE_SYSTEM=yes test/mruby/run-test.rb
       - name: "Test: stdio"
         run: |
           grntest \
