--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -105,6 +105,7 @@ jobs:
       - name: Setup
         run: |
           set -x
+          sudo incus admin init --auto
           sudo incus launch ${{ matrix.image }} target
           sudo incus config device add target host disk source=$PWD path=/host
           sudo incus exec target -- /host/setup.sh
