doc package: update version info to 14.0.3 (2024-05-09)

--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -429,6 +429,9 @@ exit 0
 %config(noreplace) %{_sysconfdir}/munin/plugin-conf.d/*
 
 %changelog
+* Thu May 09 2024 Horimoto Yasuhiro <horimoto@clear-code.com> - 14.0.3-1
+- New upstream release.
+
 * Fri Mar 29 2024 Horimoto Yasuhiro <horimoto@clear-code.com> - 14.0.2-1
 - New upstream release.
 
