--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -429,6 +429,9 @@ exit 0
 %config(noreplace) %{_sysconfdir}/munin/plugin-conf.d/*
 
 %changelog
+* Tue May 28 2024 Horimoto Yasuhiro <horimoto@clear-code.com> - 14.0.4-1
+- New upstream release.
+
 * Thu May 09 2024 Horimoto Yasuhiro <horimoto@clear-code.com> - 14.0.3-1
 - New upstream release.
 
