--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -542,6 +542,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+      - uses: actions/checkout@v4
+        with:
+          path: apache-arrow
+          ref: apache-arrow-16.1.0
+          repository: apache/arrow
+          submodules: recursive
       # Use CMake 3.27 not 3.26.
       # Workaround: https://github.com/actions/runner-images/issues/8598
       - name: Remove Strawberry Perl
@@ -630,13 +636,13 @@ jobs:
         shell: cmd
         run: |
           call "%VC_PREFIX%\Auxiliary\Build\vcvarsall.bat" %VC_ARCHITECTURE%
-          set CMAKE_ARGS=-S vendor\apache-arrow-source\cpp
+          set CMAKE_ARGS=-S apache-arrow\cpp
           set CMAKE_ARGS=%CMAKE_ARGS% -B ..\apache-arrow-build
           set CMAKE_ARGS=%CMAKE_ARGS% -G Ninja
           set CMAKE_ARGS=%CMAKE_ARGS% -DARROW_BUILD_STATIC=OFF
           set CMAKE_ARGS=%CMAKE_ARGS% -DARROW_COMPUTE=ON
           set CMAKE_ARGS=%CMAKE_ARGS% -DBoost_SOURCE=BUNDLED
-          set CMAKE_ARGS=%CMAKE_ARGS% -DCMAKE_BUILD_TYPE=Release
+          set CMAKE_ARGS=%CMAKE_ARGS% -DCMAKE_BUILD_TYPE=RelWithDebInfo
           set CMAKE_ARGS=%CMAKE_ARGS% -DCMAKE_INSTALL_PREFIX=%FULL_INSTALL_FOLDER%
           set CMAKE_ARGS=%CMAKE_ARGS% -DCMAKE_UNITY_BUILD=ON
           cmake %CMAKE_ARGS% || (type ..\apache-arrow-build\CMakeFiles\CMakeError.log & exit /B)
