--- a/packages/Rakefile
+++ b/packages/Rakefile
@@ -19,22 +19,12 @@ class GroongaPackageTask < PackagesGroongaOrgPackageTask
   end
 
   def detect_target_apache_arrow_version
-    cmakelists = File.join(__dir__,
-                           "..",
-                           "vendor",
-                           "apache-arrow-source",
-                           "cpp",
-                           "CMakeLists.txt")
-    matched = File.read(cmakelists).match(/^set\(ARROW_VERSION "(.+?)"\)/)
-    version = matched[1]
-    matched = version.match(/-SNAPSHOT\z/)
-    if matched
-      major_version = matched.pre_match.split(".", 2)[0].to_i
-      previous_major_version = major_version - 1
-      "#{previous_major_version}.0.0"
-    else
-      version
-    end
+    cmake_yml = File.join(__dir__,
+                          "..",
+                          ".github",
+                          "workflows",
+                          "cmake.yml")
+    File.read(cmake_yml)[/ref: apache-arrow-([\d.]+)/, 1]
   end
 
   def detect_target_apache_arrow_major_version
