ci cmake windows: ensure using the latest msvcp140.dll
GitHub: fix GH-1788

If we use std::mutex with Visual C++ 14.39.33519, we need the latest
msvcp140.dll. But the current windows-2022 image's
c:\windows\system32\msvcp140.dll isn't the latest msvcp140.dll.

If we use std::mutex with Visual C++ 14.39.33519 and old msvcp140.dll,
std::mutex::mutex() is crashed.

We can choose either approach of the followings:

1. Define _DISABLE_CONSTEXPR_MUTEX_CONSTRUCTOR to disable
   std::mutex::mutex() incompatibility. If we define it,
   old msvcp140.dll works.
2. Use the latest msvcp140.dll.

This choose 2.

See also:
* https://developercommunity.visualstudio.com/t/Access-violation-in-_Thrd_yield-after-up/10664660
* https://github.com/actions/runner-images/issues/10004

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -793,13 +793,13 @@ jobs:
       - name: "Test: command line"
         run: |
           ruby test\command_line\run-test.rb `
-            --groonga-install-prefix="${Env:FULL_INSTALL_FOLDER}"
+            --groonga-install-prefix="${Env:FULL_INSTALL_FOLDER_WITH_VCRUNTIME}"
       - name: "Test: HTTP: reference count: Apache Arrow: chunked"
         run: |
           $Env:GRN_ENABLE_REFERENCE_COUNT = "yes"
           grntest `
             --base-directory test\command `
-            --groonga "${Env:FULL_INSTALL_FOLDER}\bin\groonga.exe" `
+            --groonga "${Env:FULL_INSTALL_FOLDER_WITH_VCRUNTIME}\bin\groonga.exe" `
             --input-type apache-arrow `
             --interface http `
             --n-retries 2 `
