--- a/config.h.cmake.in
+++ b/config.h.cmake.in
@@ -97,6 +97,7 @@
 #cmakedefine GRN_WITH_ONIGMO
 #cmakedefine GRN_WITH_RAPIDJSON
 #cmakedefine GRN_WITH_ROARING_BITMAPS
+#cmakedefine GRN_WITH_SIMDJSON
 #cmakedefine GRN_WITH_SIMSIMD
 #cmakedefine GRN_WITH_XSIMD
 #cmakedefine GRN_WITH_XXHASH
