--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
           ?include/groonga/command_arguments\.hpp|
           ?include/groonga/dat\.h|
           ?include/groonga/distance\.h|
+          ?include/groonga/expr\.h|
           ?include/groonga/float\.h|
           ?include/groonga/groonga\.h|
           ?include/groonga/h3\.h|
