--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -659,9 +659,9 @@ else()
 endif()
 
 file(READ "${CMAKE_CURRENT_SOURCE_DIR}/bundled_simdjson_version"
-     GRN_SIMDJSON_BUNDLED_VERSION)
+     GRN_BUNDLED_SIMDJSON_VERSION)
 string(STRIP "${GRN_BUNDLED_SIMDJSON_VERSION}" GRN_BUNDLED_SIMDJSON_VERSION)
-set(GRN_SIMDJSON_EP_VERSION ${GRN_BUNDLED_SIMDJSON_VERSION})
+set(GRN_SIMDJSON_BUNDLED_VERSION ${GRN_BUNDLED_SIMDJSON_VERSION})
 
 set(GRN_WITH_SIMDJSON
     "auto"
