--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -113,6 +113,7 @@ repos:
           ?lib/proc/proc_column\.c|
           ?lib/proc/proc_distance\.c|
           ?lib/proc/proc_highlight\.c|
+          ?lib/proc/proc_object\.c|
           ?lib/proc/proc_object_inspect\.c|
           ?lib/proc/proc_query\.c|
           ?lib/proc/proc_select\.cpp|
