clang-format: add lib/mrb/mrb_object.c

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -106,6 +106,7 @@ repos:
           ?lib/mrb/mrb_ctx\.c|
           ?lib/mrb/mrb_error\.c|
           ?lib/mrb/mrb_expr\.c|
+          ?lib/mrb/mrb_object\.c|
           ?lib/obj\.c|
           ?lib/operator\.c|
           ?lib/output\.c|
