--- a/Makefile.am
+++ b/Makefile.am
@@ -30,6 +30,7 @@ EXTRA_DIST =					\
 	bundled_mecab_naist_jdic_version	\
 	bundled_mecab_version			\
 	bundled_rapidjson_version		\
+	bundled_simdjson_version		\
 	bundled_xxhash_version			\
 	config.h.cmake.in			\
 	gpg_uid					\
