--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -128,6 +128,7 @@ jobs:
             libzstd-dev \
             mecab-naist-jdic \
             ninja-build \
+            rapidjson-dev \
             ruby-dev \
             zlib1g-dev
       - name: CMake
