--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -81,6 +81,7 @@ repos:
           ?lib/grn_ii\.h|
           ?lib/grn_io\.h|
           ?lib/grn_load\.h|
+          ?lib/grn_mrb\.h|
           ?lib/grn_obj\.h|
           ?lib/grn_proc\.h|
           ?lib/grn_request_canceler\.h|
