doc package: update version info to 14.0.6 (2024-07-29)

--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -429,6 +429,9 @@ exit 0
 %config(noreplace) %{_sysconfdir}/munin/plugin-conf.d/*
 
 %changelog
+* Mon Jul 29 2024 Horimoto Yasuhiro <horimoto@clear-code.com> - 14.0.6-1
+- New upstream release.
+
 * Wed Jun 26 2024 Horimoto Yasuhiro <horimoto@clear-code.com> - 14.0.5-1
 - New upstream release.
 
