--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -658,11 +658,9 @@ else()
   set(GRN_WITH_ZSTD FALSE)
 endif()
 
-file(READ "${CMAKE_CURRENT_SOURCE_DIR}/bundled_simdjson_version"
-     GRN_BUNDLED_SIMDJSON_VERSION)
-string(STRIP "${GRN_BUNDLED_SIMDJSON_VERSION}" GRN_BUNDLED_SIMDJSON_VERSION)
-set(GRN_SIMDJSON_BUNDLED_VERSION "${GRN_BUNDLED_SIMDJSON_VERSION}")
-
+set(GRN_SIMDJSON_BUNDLED_VERSION "3.9.4")
+set(GRN_SIMDJSON_BUNDLED_SHA256
+    "9bf13be00fa1e1c5891a90dbc39b983e09972f0972a8956c20a9974cedfcca2f")
 set(GRN_WITH_SIMDJSON
     "auto"
     CACHE STRING "Support JSON processing by simdjson.")
