Enable simdjson in .deb/.rpm

--- a/packages/apt/debian-bookworm/Dockerfile
+++ b/packages/apt/debian-bookworm/Dockerfile
@@ -35,6 +35,7 @@ RUN \
     libmsgpack-dev \
     libjemalloc-dev \
     libpcre3-dev \
+    libsimdjson-dev \
     libssl-dev \
     libstemmer-dev \
     libthrift-dev \
