--- a/packages/yum/almalinux-8/Dockerfile
+++ b/packages/yum/almalinux-8/Dockerfile
@@ -21,6 +21,7 @@ RUN \
     intltool \
     libedit-devel \
     libevent-devel \
+    libsimdjson-devel \
     libstemmer-devel \
     libzstd-devel \
     lz4-devel \
