--- a/packages/yum/almalinux-9/Dockerfile
+++ b/packages/yum/almalinux-9/Dockerfile
@@ -26,6 +26,7 @@ RUN \
     mecab-devel \
     libedit-devel \
     libevent-devel \
+    libsimdjson-devel \
     libstemmer-devel \
     libzstd-devel \
     lz4-devel \
