--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -33,6 +33,7 @@ BuildRequires:	openssl-devel
 BuildRequires:	pcre-devel
 BuildRequires:	pkgconfig
 BuildRequires:	ruby
+BuildRequires:	simdjson-devel
 # Old xsimd-devel doesn't work. At least 9.0.0 or older don't work.
 # See also -DGRN_WITH_XSIMD=bundled with cmake.
 #BuildRequires:	xsimd-devel
@@ -58,6 +59,7 @@ Requires:	arrow@APACHE_ARROW_MAJOR_VERSION@-libs
 Requires:	libzstd
 Requires:	lz4
 Requires:	msgpack
+Requires:	simdjson
 Requires:	xxhash-libs
 Requires:	zlib
 Requires(post):	/sbin/ldconfig
