cmake: add grn_prepare_fetchcontent()
It defines common variables.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -558,6 +558,14 @@ set(GRN_FETCH_CONTENT_COMMON_OPTIONS)
 if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.28)
   list(APPEND GRN_FETCH_CONTENT_COMMON_OPTIONS EXCLUDE_FROM_ALL TRUE)
 endif()
+macro(grn_prepare_fetchcontent)
+  set(BUILD_SHARED_LIBS OFF)
+  set(BUILD_STATIC_LIBS ON)
+  set(BUILD_TESTING OFF)
+  set(CMAKE_COMPILE_WARNING_AS_ERROR FALSE)
+  set(CMAKE_EXPORT_NO_PACKAGE_REGISTRY TRUE)
+  set(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
+endmacro()
 
 include(ExternalProject)
 set(GRN_EP_COMMON_OPTIONS
@@ -617,7 +625,7 @@ if(NOT "${GRN_WITH_ZSTD}" STREQUAL "no")
         ${GRN_FETCH_CONTENT_COMMON_OPTIONS} SOURCE_SUBDIR "build/cmake"
         URL ${ZSTD_SOURCE_URL}
         URL_HASH "SHA256=${GRN_ZSTD_BUNDLED_SHA256}")
-      set(BUILD_TESTING OFF)
+      grn_prepare_fetchcontent()
       set(ZSTD_BUILD_PROGRAMS OFF)
       set(ZSTD_BUILD_SHARED OFF)
       set(ZSTD_BUILD_STATIC ON)
@@ -1124,11 +1132,10 @@ if(NOT "${GRN_WITH_BLOSC}" STREQUAL "no")
         ${GRN_FETCH_CONTENT_COMMON_OPTIONS}
         URL ${BLOSC_SOURCE_URL}
         URL_HASH "SHA256=${GRN_BLOSC_BUNDLED_SHA256}")
+      grn_prepare_fetchcontent()
       set(BUILD_BENCHMARKS OFF)
       set(BUILD_EXAMPLES OFF)
       set(BUILD_FUZZERS OFF)
-      set(BUILD_SHARED OFF)
-      set(BUILD_STATIC ON)
       set(BUILD_TESTS OFF)
       set(PREFER_EXTERNAL_LZ4 ON)
       if(GRN_WITH_LZ4)
@@ -1232,6 +1239,7 @@ if(NOT "${GRN_WITH_XSIMD}" STREQUAL "no")
         ${GRN_FETCH_CONTENT_COMMON_OPTIONS}
         URL ${XSIMD_SOURCE_URL}
         URL_HASH "SHA256=${GRN_XSIMD_BUNDLED_SHA256}")
+      grn_prepare_fetchcontent()
       set(BUILD_BENCHMARKS OFF)
       set(BUILD_EXAMPLES OFF)
       set(BUILD_TESTS OFF)
@@ -1279,6 +1287,7 @@ if(GRN_WITH_SIMSIMD)
       ${GRN_FETCH_CONTENT_COMMON_OPTIONS}
       URL ${SIMSIMD_SOURCE_URL}
       URL_HASH "SHA256=${GRN_SIMSIMD_BUNDLED_SHA256}")
+    grn_prepare_fetchcontent()
     fetchcontent_makeavailable(simsimd)
     if(CMAKE_VERSION VERSION_LESS 3.28)
       set_property(DIRECTORY ${simsimd_SOURCE_DIR} PROPERTY EXCLUDE_FROM_ALL
@@ -1339,12 +1348,12 @@ if(NOT "${GRN_WITH_H3}" STREQUAL "no")
         ${GRN_FETCH_CONTENT_COMMON_OPTIONS}
         URL ${H3_SOURCE_URL}
         URL_HASH "SHA256=${GRN_H3_SHA256}")
+      grn_prepare_fetchcontent()
       set(BUILD_BENCHMARKS OFF)
       set(BUILD_FILTERS OFF)
       set(BUILD_FUZZERS OFF)
       set(BUILD_GENERATORS OFF)
       set(BUILD_SHARED_LIBS OFF)
-      set(CMAKE_POSITION_INDEPENDENT_CODE ON)
       set(ENABLE_DOCS OFF)
       set(ENABLE_FORMAT OFF)
       set(ENABLE_LINTING OFF)
