Add support for simdjson (#1799)
GitHub: #1518

This keeps RapidJSON support but we'll remove RapidJSON support later.

---------

Co-authored-by: Sutou Kouhei <kou@clear-code.com>

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -122,6 +122,7 @@ jobs:
             liblz4-dev \
             libmecab-dev \
             libmsgpack-dev \
+            libsimdjson-dev \
             libstemmer-dev \
             libxxhash-dev \
             libzstd-dev \
