--- a/packages/yum/almalinux-8/Dockerfile
+++ b/packages/yum/almalinux-8/Dockerfile
@@ -33,6 +33,7 @@ RUN \
     python2-devel \
     rapidjson-devel \
     ruby \
+    simdjson-devel \
     tar \
     xxhash-devel \
     zlib-devel && \
