--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1016,9 +1016,23 @@ else()
   set(GRN_WITH_LZ4 FALSE)
 endif()
 
-find_package(Groongalibedit)
-if(Groongalibedit_FOUND)
-  set(GRN_WITH_LIBEDIT TRUE)
+set(GRN_WITH_LIBEDIT
+    "auto"
+    CACHE STRING "Support command line editing in groonga command by libedit.")
+if(NOT "${GRN_WITH_LIBEDIT}" STREQUAL "no")
+  if("${GRN_WITH_LIBEDIT}" STREQUAL "system")
+    find_package(Groongalibedit REQUIRED)
+  else()
+    find_package(Groongalibedit)
+  endif()
+  if(Groongalibedit_FOUND)
+    set(GRN_WITH_LIBEDIT TRUE)
+    message(STATUS "libedit: system")
+  else()
+    set(GRN_WITH_LIBEDIT FALSE)
+  endif()
+else()
+  set(GRN_WITH_LIBEDIT FALSE)
 endif()
 
 set(GRN_CROARING_EP_VERSION "1.1.2")
