packages: add libedit package as dependency
This patch will install libedit when it builds the groonga package due to build a package with libedit enabled.

GitHub: GH-1844, GH-1852

--- a/packages/apt/debian-bookworm/Dockerfile
+++ b/packages/apt/debian-bookworm/Dockerfile
@@ -29,6 +29,7 @@ RUN \
     devscripts \
     lsb-release \
     libarrow-dev \
+    libedit-dev \
     libevent-dev \
     liblz4-dev \
     libmecab-dev \
