cmake libedit: enable libedit feature if found the library (#1852)
GitHub: GH-1844

If libedit is present in the system,
this PR will link the libedit library to groonga
so that the Groonga's REPL can use the libedit feature.

---------

Co-authored-by: Horimoto Yasuhiro <horimoto@clear-code.com>

--- a/config.h.cmake.in
+++ b/config.h.cmake.in
@@ -89,6 +89,7 @@
 #cmakedefine GRN_WITH_H3
 #cmakedefine GRN_WITH_H3_BUNDLED
 #cmakedefine GRN_WITH_KYTEA
+#cmakedefine GRN_WITH_LIBEDIT
 #cmakedefine GRN_WITH_LZ4
 #cmakedefine GRN_WITH_MECAB
 #cmakedefine GRN_WITH_MESSAGE_PACK
