--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -183,6 +183,7 @@ jobs:
           - Debian GNU/Linux bookworm arm64
           - Debian GNU/Linux trixie amd64
           - Debian GNU/Linux trixie arm64
+          - Ubuntu focal amd64
           - AlmaLinux 8 x86_64
           - AlmaLinux 8 aarch64
           - AlmaLinux 9 x86_64
@@ -208,6 +209,11 @@ jobs:
             task-namespace: apt
             target: debian-trixie-arm64
             test-docker-image: arm64v8/debian:trixie
+          - label: Ubuntu focal amd64
+            id: ubuntu-focal-amd64
+            task-namespace: apt
+            target: ubuntu-focal
+            test-docker-image: ubuntu:focal
           - label: AlmaLinux 8 x86_64
             id: almalinux-8-x86_64
             task-namespace: yum
