--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -179,61 +179,61 @@ jobs:
       fail-fast: false
       matrix:
         label:
-          - Debian GNU/Linux bookworm amd64
-          - Debian GNU/Linux bookworm arm64
-          - Debian GNU/Linux trixie amd64
-          - Debian GNU/Linux trixie arm64
+          # - Debian GNU/Linux bookworm amd64
+          # - Debian GNU/Linux bookworm arm64
+          # - Debian GNU/Linux trixie amd64
+          # - Debian GNU/Linux trixie arm64
           - Ubuntu focal amd64
-          - AlmaLinux 8 x86_64
-          - AlmaLinux 8 aarch64
-          - AlmaLinux 9 x86_64
-          - AlmaLinux 9 aarch64
+          # - AlmaLinux 8 x86_64
+          # - AlmaLinux 8 aarch64
+          # - AlmaLinux 9 x86_64
+          # - AlmaLinux 9 aarch64
         include:
-          - label: Debian GNU/Linux bookworm amd64
-            id: debian-bookworm-amd64
-            task-namespace: apt
-            target: debian-bookworm
-            test-docker-image: debian:bookworm
-          - label: Debian GNU/Linux bookworm arm64
-            id: debian-bookworm-arm64
-            task-namespace: apt
-            target: debian-bookworm-arm64
-            test-docker-image: arm64v8/debian:bookworm
-          - label: Debian GNU/Linux trixie amd64
-            id: debian-trixie-amd64
-            task-namespace: apt
-            target: debian-trixie
-            test-docker-image: debian:trixie
-          - label: Debian GNU/Linux trixie arm64
-            id: debian-trixie-arm64
-            task-namespace: apt
-            target: debian-trixie-arm64
-            test-docker-image: arm64v8/debian:trixie
+          # - label: Debian GNU/Linux bookworm amd64
+          #   id: debian-bookworm-amd64
+          #   task-namespace: apt
+          #   target: debian-bookworm
+          #   test-docker-image: debian:bookworm
+          # - label: Debian GNU/Linux bookworm arm64
+          #   id: debian-bookworm-arm64
+          #   task-namespace: apt
+          #   target: debian-bookworm-arm64
+          #   test-docker-image: arm64v8/debian:bookworm
+          # - label: Debian GNU/Linux trixie amd64
+          #   id: debian-trixie-amd64
+          #   task-namespace: apt
+          #   target: debian-trixie
+          #   test-docker-image: debian:trixie
+          # - label: Debian GNU/Linux trixie arm64
+          #   id: debian-trixie-arm64
+          #   task-namespace: apt
+          #   target: debian-trixie-arm64
+          #   test-docker-image: arm64v8/debian:trixie
           - label: Ubuntu focal amd64
             id: ubuntu-focal-amd64
             task-namespace: apt
             target: ubuntu-focal-amd64
             test-docker-image: ubuntu:focal
-          - label: AlmaLinux 8 x86_64
-            id: almalinux-8-x86_64
-            task-namespace: yum
-            target: almalinux-8
-            test-docker-image: almalinux:8
-          - label: AlmaLinux 8 aarch64
-            id: almalinux-8-aarch64
-            task-namespace: yum
-            target: almalinux-8-aarch64
-            test-docker-image: arm64v8/almalinux:8
-          - label: AlmaLinux 9 x86_64
-            id: almalinux-9-x86_64
-            task-namespace: yum
-            target: almalinux-9
-            test-docker-image: almalinux:9
-          - label: AlmaLinux 9 aarch64
-            id: almalinux-9-aarch64
-            task-namespace: yum
-            target: almalinux-9-aarch64
-            test-docker-image: arm64v8/almalinux:9
+          # - label: AlmaLinux 8 x86_64
+          #   id: almalinux-8-x86_64
+          #   task-namespace: yum
+          #   target: almalinux-8
+          #   test-docker-image: almalinux:8
+          # - label: AlmaLinux 8 aarch64
+          #   id: almalinux-8-aarch64
+          #   task-namespace: yum
+          #   target: almalinux-8-aarch64
+          #   test-docker-image: arm64v8/almalinux:8
+          # - label: AlmaLinux 9 x86_64
+          #   id: almalinux-9-x86_64
+          #   task-namespace: yum
+          #   target: almalinux-9
+          #   test-docker-image: almalinux:9
+          # - label: AlmaLinux 9 aarch64
+          #   id: almalinux-9-aarch64
+          #   task-namespace: yum
+          #   target: almalinux-9-aarch64
+          #   test-docker-image: arm64v8/almalinux:9
     env:
       APACHE_ARROW_REPOSITORY: ${{ github.workspace }}/apache-arrow
     runs-on: ubuntu-latest
