--- a/packages/apt/ubuntu-focal/Dockerfile
+++ b/packages/apt/ubuntu-focal/Dockerfile
@@ -9,8 +9,6 @@ ARG DEBUG
 
 RUN \
   quiet=$([ "${DEBUG}" = "yes" ] || echo "-qq") && \
-  grep '^deb ' /etc/apt/sources.list | \
-    sed -e 's/^deb /deb-src /' > /etc/apt/sources.list.d/base-source.list && \
   apt update ${quiet} && \
   apt install -y -V --no-install-recommends ${quiet} \
     ca-certificates \
@@ -18,6 +16,9 @@ RUN \
     lsb-release \
     software-properties-common \
     wget && \
+  wget https://apache.jfrog.io/artifactory/arrow/$(lsb_release --id --short | tr 'A-Z' 'a-z')/apache-arrow-apt-source-latest-$(lsb_release --codename --short).deb && \
+  apt install -y -V ${quiet} ./apache-arrow-apt-source-latest-$(lsb_release --codename --short).deb && \
+  rm apache-arrow-apt-source-latest-$(lsb_release --codename --short).deb && \
   add-apt-repository -y ppa:groonga/ppa && \
   apt update ${quiet} && \
   apt install -y -V ${quiet} \
