--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,6 +11,7 @@ on:
       - '**/*.cmake.in'
       - '**/CMakeLists.txt'
       - '.github/workflows/cmake.yml'
+      - 'Brewfile'
       - 'ci/**'
       - 'cmake/**'
       - 'include/**/*.h'
@@ -37,6 +38,7 @@ on:
       - '**/*.cmake.in'
       - '**/CMakeLists.txt'
       - '.github/workflows/cmake.yml'
+      - 'Brewfile'
       - 'ci/**'
       - 'cmake/**'
       - 'include/**/*.h'
